lib/LibNotcurses.jl


function ncdplot_create(n, opts, miny, maxy)
    @ccall libnotcurses.ncdplot_create(n::Ptr{ncplane}, opts::Ptr{ncplot_options}, miny::Cdouble, maxy::Cdouble)::Ptr{ncdplot}
end

function ncuplot_plane(n)
    @ccall libnotcurses.ncuplot_plane(n::Ptr{ncuplot})::Ptr{ncplane}
end

function ncdplot_plane(n)
    @ccall libnotcurses.ncdplot_plane(n::Ptr{ncdplot})::Ptr{ncplane}
end

function ncuplot_add_sample(n, x, y)
    @ccall libnotcurses.ncuplot_add_sample(n::Ptr{ncuplot}, x::UInt64, y::UInt64)::Cint
end

function ncdplot_add_sample(n, x, y)
    @ccall libnotcurses.ncdplot_add_sample(n::Ptr{ncdplot}, x::UInt64, y::Cdouble)::Cint
end

function ncuplot_set_sample(n, x, y)
    @ccall libnotcurses.ncuplot_set_sample(n::Ptr{ncuplot}, x::UInt64, y::UInt64)::Cint
end

function ncdplot_set_sample(n, x, y)
    @ccall libnotcurses.ncdplot_set_sample(n::Ptr{ncdplot}, x::UInt64, y::Cdouble)::Cint
end

function ncuplot_sample(n, x, y)
    @ccall libnotcurses.ncuplot_sample(n::Ptr{ncuplot}, x::UInt64, y::Ptr{UInt64})::Cint
end

function ncdplot_sample(n, x, y)
    @ccall libnotcurses.ncdplot_sample(n::Ptr{ncdplot}, x::UInt64, y::Ptr{Cdouble})::Cint
end

function ncuplot_destroy(n)
    @ccall libnotcurses.ncuplot_destroy(n::Ptr{ncuplot})::Cvoid
end

function ncdplot_destroy(n)
    @ccall libnotcurses.ncdplot_destroy(n::Ptr{ncdplot})::Cvoid
end

# typedef int ( * ncfdplane_callback ) ( struct ncfdplane * n , const void * buf , size_t s , void * curry )
const ncfdplane_callback = Ptr{Cvoid}

# typedef int ( * ncfdplane_done_cb ) ( struct ncfdplane * n , int fderrno , void * curry )
const ncfdplane_done_cb = Ptr{Cvoid}

struct ncfdplane_options
    curry::Ptr{Cvoid}
    follow::Bool
    flags::UInt64
end

function ncfdplane_create(n, opts, fd, cbfxn, donecbfxn)
    @ccall libnotcurses.ncfdplane_create(n::Ptr{ncplane}, opts::Ptr{ncfdplane_options}, fd::Cint, cbfxn::ncfdplane_callback, donecbfxn::ncfdplane_done_cb)::Ptr{ncfdplane}
end

function ncfdplane_plane(n)
    @ccall libnotcurses.ncfdplane_plane(n::Ptr{ncfdplane})::Ptr{ncplane}
end

function ncfdplane_destroy(n)
    @ccall libnotcurses.ncfdplane_destroy(n::Ptr{ncfdplane})::Cint
end

struct ncsubproc_options
    curry::Ptr{Cvoid}
    restart_period::UInt64
    flags::UInt64
end

function ncsubproc_createv(n, opts, bin, arg, cbfxn, donecbfxn)
    @ccall libnotcurses.ncsubproc_createv(n::Ptr{ncplane}, opts::Ptr{ncsubproc_options}, bin::Ptr{Cchar}, arg::Ptr{Ptr{Cchar}}, cbfxn::ncfdplane_callback, donecbfxn::ncfdplane_done_cb)::Ptr{ncsubproc}
end

function ncsubproc_createvp(n, opts, bin, arg, cbfxn, donecbfxn)
    @ccall libnotcurses.ncsubproc_createvp(n::Ptr{ncplane}, opts::Ptr{ncsubproc_options}, bin::Ptr{Cchar}, arg::Ptr{Ptr{Cchar}}, cbfxn::ncfdplane_callback, donecbfxn::ncfdplane_done_cb)::Ptr{ncsubproc}
end

function ncsubproc_createvpe(n, opts, bin, arg, env, cbfxn, donecbfxn)
    @ccall libnotcurses.ncsubproc_createvpe(n::Ptr{ncplane}, opts::Ptr{ncsubproc_options}, bin::Ptr{Cchar}, arg::Ptr{Ptr{Cchar}}, env::Ptr{Ptr{Cchar}}, cbfxn::ncfdplane_callback, donecbfxn::ncfdplane_done_cb)::Ptr{ncsubproc}
end

function ncsubproc_plane(n)
    @ccall libnotcurses.ncsubproc_plane(n::Ptr{ncsubproc})::Ptr{ncplane}
end

function ncsubproc_destroy(n)
    @ccall libnotcurses.ncsubproc_destroy(n::Ptr{ncsubproc})::Cint
end

function ncplane_qrcode(n, ymax, xmax, data, len)
    @ccall libnotcurses.ncplane_qrcode(n::Ptr{ncplane}, ymax::Ptr{Cuint}, xmax::Ptr{Cuint}, data::Ptr{Cvoid}, len::Csize_t)::Cint
end

struct ncreader_options
    tchannels::UInt64
    tattrword::UInt32
    flags::UInt64
end

function ncreader_create(n, opts)
    @ccall libnotcurses.ncreader_create(n::Ptr{ncplane}, opts::Ptr{ncreader_options})::Ptr{ncreader}
end

function ncreader_clear(n)
    @ccall libnotcurses.ncreader_clear(n::Ptr{ncreader})::Cint
end

function ncreader_plane(n)
    @ccall libnotcurses.ncreader_plane(n::Ptr{ncreader})::Ptr{ncplane}
end

function ncreader_offer_input(n, ni)
    @ccall libnotcurses.ncreader_offer_input(n::Ptr{ncreader}, ni::Ptr{ncinput})::Bool
end

function ncreader_move_left(n)
    @ccall libnotcurses.ncreader_move_left(n::Ptr{ncreader})::Cint
end

function ncreader_move_right(n)
    @ccall libnotcurses.ncreader_move_right(n::Ptr{ncreader})::Cint
end

function ncreader_move_up(n)
    @ccall libnotcurses.ncreader_move_up(n::Ptr{ncreader})::Cint
end

function ncreader_move_down(n)
    @ccall libnotcurses.ncreader_move_down(n::Ptr{ncreader})::Cint
end

function ncreader_write_egc(n, egc)
    @ccall libnotcurses.ncreader_write_egc(n::Ptr{ncreader}, egc::Ptr{Cchar})::Cint
end

function ncreader_contents(n)
    @ccall libnotcurses.ncreader_contents(n::Ptr{ncreader})::Ptr{Cchar}
end

function ncreader_destroy(n, contents)
    @ccall libnotcurses.ncreader_destroy(n::Ptr{ncreader}, contents::Ptr{Ptr{Cchar}})::Cvoid
end

function notcurses_accountname()
    @ccall libnotcurses.notcurses_accountname()::Ptr{Cchar}
end

function notcurses_hostname()
    @ccall libnotcurses.notcurses_hostname()::Ptr{Cchar}
end

function notcurses_osversion()
    @ccall libnotcurses.notcurses_osversion()::Ptr{Cchar}
end

function notcurses_debug(nc, debugfp)
    @ccall libnotcurses.notcurses_debug(nc::Ptr{notcurses}, debugfp::Ptr{Libc.FILE})::Cvoid
end

function ncdirect_init(termtype, fp, flags)
    @ccall libnotcurses.ncdirect_init(termtype::Ptr{Cchar}, fp::Ptr{Libc.FILE}, flags::UInt64)::Ptr{ncdirect}
end

function ncdirect_core_init(termtype, fp, flags)
    @ccall libnotcurses.ncdirect_core_init(termtype::Ptr{Cchar}, fp::Ptr{Libc.FILE}, flags::UInt64)::Ptr{ncdirect}
end

function ncdirect_readline(nc, prompt)
    @ccall libnotcurses.ncdirect_readline(nc::Ptr{ncdirect}, prompt::Ptr{Cchar})::Ptr{Cchar}
end

function ncdirect_set_fg_rgb(nc, rgb)
    @ccall libnotcurses.ncdirect_set_fg_rgb(nc::Ptr{ncdirect}, rgb::Cuint)::Cint
end

function ncdirect_set_bg_rgb(nc, rgb)
    @ccall libnotcurses.ncdirect_set_bg_rgb(nc::Ptr{ncdirect}, rgb::Cuint)::Cint
end

function ncdirect_set_fg_palindex(nc, pidx)
    @ccall libnotcurses.ncdirect_set_fg_palindex(nc::Ptr{ncdirect}, pidx::Cint)::Cint
end

function ncdirect_set_bg_palindex(nc, pidx)
    @ccall libnotcurses.ncdirect_set_bg_palindex(nc::Ptr{ncdirect}, pidx::Cint)::Cint
end

function ncdirect_palette_size(nc)
    @ccall libnotcurses.ncdirect_palette_size(nc::Ptr{ncdirect})::Cuint
end

function ncdirect_putstr(nc, channels, utf8)
    @ccall libnotcurses.ncdirect_putstr(nc::Ptr{ncdirect}, channels::UInt64, utf8::Ptr{Cchar})::Cint
end

function ncdirect_putegc(nc, channels, utf8, sbytes)
    @ccall libnotcurses.ncdirect_putegc(nc::Ptr{ncdirect}, channels::UInt64, utf8::Ptr{Cchar}, sbytes::Ptr{Cint})::Cint
end

function ncdirect_flush(nc)
    @ccall libnotcurses.ncdirect_flush(nc::Ptr{ncdirect})::Cint
end

function ncdirect_set_bg_rgb8(nc, r, g, b)
    @ccall libnotcurses.ncdirect_set_bg_rgb8(nc::Ptr{ncdirect}, r::Cuint, g::Cuint, b::Cuint)::Cint
end

function ncdirect_set_fg_rgb8(nc, r, g, b)
    @ccall libnotcurses.ncdirect_set_fg_rgb8(nc::Ptr{ncdirect}, r::Cuint, g::Cuint, b::Cuint)::Cint
end

function ncdirect_set_fg_default(nc)
    @ccall libnotcurses.ncdirect_set_fg_default(nc::Ptr{ncdirect})::Cint
end

function ncdirect_set_bg_default(nc)
    @ccall libnotcurses.ncdirect_set_bg_default(nc::Ptr{ncdirect})::Cint
end

function ncdirect_dim_x(nc)
    @ccall libnotcurses.ncdirect_dim_x(nc::Ptr{ncdirect})::Cuint
end

function ncdirect_dim_y(nc)
    @ccall libnotcurses.ncdirect_dim_y(nc::Ptr{ncdirect})::Cuint
end

function ncdirect_supported_styles(nc)
    @ccall libnotcurses.ncdirect_supported_styles(nc::Ptr{ncdirect})::UInt16
end

function ncdirect_set_styles(n, stylebits)
    @ccall libnotcurses.ncdirect_set_styles(n::Ptr{ncdirect}, stylebits::Cuint)::Cint
end

function ncdirect_on_styles(n, stylebits)
    @ccall libnotcurses.ncdirect_on_styles(n::Ptr{ncdirect}, stylebits::Cuint)::Cint
end

function ncdirect_off_styles(n, stylebits)
    @ccall libnotcurses.ncdirect_off_styles(n::Ptr{ncdirect}, stylebits::Cuint)::Cint
end

function ncdirect_styles(n)
    @ccall libnotcurses.ncdirect_styles(n::Ptr{ncdirect})::UInt16
end

function ncdirect_cursor_move_yx(n, y, x)
    @ccall libnotcurses.ncdirect_cursor_move_yx(n::Ptr{ncdirect}, y::Cint, x::Cint)::Cint
end

function ncdirect_cursor_enable(nc)
    @ccall libnotcurses.ncdirect_cursor_enable(nc::Ptr{ncdirect})::Cint
end

function ncdirect_cursor_disable(nc)
    @ccall libnotcurses.ncdirect_cursor_disable(nc::Ptr{ncdirect})::Cint
end

function ncdirect_cursor_up(nc, num)
    @ccall libnotcurses.ncdirect_cursor_up(nc::Ptr{ncdirect}, num::Cint)::Cint
end

function ncdirect_cursor_left(nc, num)
    @ccall libnotcurses.ncdirect_cursor_left(nc::Ptr{ncdirect}, num::Cint)::Cint
end

function ncdirect_cursor_right(nc, num)
    @ccall libnotcurses.ncdirect_cursor_right(nc::Ptr{ncdirect}, num::Cint)::Cint
end

function ncdirect_cursor_down(nc, num)
    @ccall libnotcurses.ncdirect_cursor_down(nc::Ptr{ncdirect}, num::Cint)::Cint
end

function ncdirect_cursor_yx(n, y, x)
    @ccall libnotcurses.ncdirect_cursor_yx(n::Ptr{ncdirect}, y::Ptr{Cuint}, x::Ptr{Cuint})::Cint
end

function ncdirect_cursor_push(n)
    @ccall libnotcurses.ncdirect_cursor_push(n::Ptr{ncdirect})::Cint
end

function ncdirect_cursor_pop(n)
    @ccall libnotcurses.ncdirect_cursor_pop(n::Ptr{ncdirect})::Cint
end

function ncdirect_clear(nc)
    @ccall libnotcurses.ncdirect_clear(nc::Ptr{ncdirect})::Cint
end

function ncdirect_capabilities(n)
    @ccall libnotcurses.ncdirect_capabilities(n::Ptr{ncdirect})::Ptr{nccapabilities}
end

function ncdirect_hline_interp(n, egc, len, h1, h2)
    @ccall libnotcurses.ncdirect_hline_interp(n::Ptr{ncdirect}, egc::Ptr{Cchar}, len::Cuint, h1::UInt64, h2::UInt64)::Cint
end

function ncdirect_vline_interp(n, egc, len, h1, h2)
    @ccall libnotcurses.ncdirect_vline_interp(n::Ptr{ncdirect}, egc::Ptr{Cchar}, len::Cuint, h1::UInt64, h2::UInt64)::Cint
end

function ncdirect_box(n, ul, ur, ll, lr, wchars, ylen, xlen, ctlword)
    @ccall libnotcurses.ncdirect_box(n::Ptr{ncdirect}, ul::UInt64, ur::UInt64, ll::UInt64, lr::UInt64, wchars::Ptr{Cwchar_t}, ylen::Cuint, xlen::Cuint, ctlword::Cuint)::Cint
end

function ncdirect_light_box(n, ul, ur, ll, lr, ylen, xlen, ctlword)
    @ccall libnotcurses.ncdirect_light_box(n::Ptr{ncdirect}, ul::UInt64, ur::UInt64, ll::UInt64, lr::UInt64, ylen::Cuint, xlen::Cuint, ctlword::Cuint)::Cint
end

function ncdirect_heavy_box(n, ul, ur, ll, lr, ylen, xlen, ctlword)
    @ccall libnotcurses.ncdirect_heavy_box(n::Ptr{ncdirect}, ul::UInt64, ur::UInt64, ll::UInt64, lr::UInt64, ylen::Cuint, xlen::Cuint, ctlword::Cuint)::Cint
end

function ncdirect_ascii_box(n, ul, ur, ll, lr, ylen, xlen, ctlword)
    @ccall libnotcurses.ncdirect_ascii_box(n::Ptr{ncdirect}, ul::UInt64, ur::UInt64, ll::UInt64, lr::UInt64, ylen::Cuint, xlen::Cuint, ctlword::Cuint)::Cint
end

function ncdirect_rounded_box(n, ul, ur, ll, lr, ylen, xlen, ctlword)
    @ccall libnotcurses.ncdirect_rounded_box(n::Ptr{ncdirect}, ul::UInt64, ur::UInt64, ll::UInt64, lr::UInt64, ylen::Cuint, xlen::Cuint, ctlword::Cuint)::Cint
end

function ncdirect_double_box(n, ul, ur, ll, lr, ylen, xlen, ctlword)
    @ccall libnotcurses.ncdirect_double_box(n::Ptr{ncdirect}, ul::UInt64, ur::UInt64, ll::UInt64, lr::UInt64, ylen::Cuint, xlen::Cuint, ctlword::Cuint)::Cint
end

function ncdirect_get(n, absdl, ni)
    @ccall libnotcurses.ncdirect_get(n::Ptr{ncdirect}, absdl::Ptr{Cvoid}, ni::Ptr{ncinput})::UInt32
end

function ncdirect_inputready_fd(n)
    @ccall libnotcurses.ncdirect_inputready_fd(n::Ptr{ncdirect})::Cint
end

function ncdirect_get_nblock(n, ni)
    @ccall libnotcurses.ncdirect_get_nblock(n::Ptr{ncdirect}, ni::Ptr{ncinput})::UInt32
end

function ncdirect_get_blocking(n, ni)
    @ccall libnotcurses.ncdirect_get_blocking(n::Ptr{ncdirect}, ni::Ptr{ncinput})::UInt32
end

function ncdirect_stop(nc)
    @ccall libnotcurses.ncdirect_stop(nc::Ptr{ncdirect})::Cint
end

const ncdirectv = ncplane

const ncdirectf = ncvisual
